Probably finished frontend version. Fixed small bug in hadnler routes. Need to fix also return by current day because size is too big]

--- a/frontend/public/assets/styles/global.css
+++ b/frontend/public/assets/styles/global.css
@@ -6,7 +6,8 @@ body{
 }
 
 #app{
-    max-width: 480px;
+    align-items: center;
+    max-width:615px;
     margin: 50px auto;
     padding: 20px;
 }
@@ -19,6 +20,7 @@ header h1{
 }
 
 .search-box{
+    max-width: 250px;
     display: flex;
     gap:    10px;
 }
@@ -46,13 +48,29 @@ header h1{
 .search-box button:hover{
     background: #0094c4;
 }
-
+#weather-result {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
 .weather-card{
-    margin-top: 30px;
-    padding: 25px;
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    margin-top: 5px;
+    padding: 15px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 15px;
     backdrop-filter: blur(10px);
+
+}
+.weather-icon img{
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    max-width: 100%;
+    display: block;
+    flex-shrink: 0;
 }
 
 .hidden{
@@ -60,12 +78,106 @@ header h1{
 }
 
 .weather-temp{
-    font-size: 48px;
-    font-weight: 700;
+    font-size: 15px;
+    font-weight: bold;
 }
 
+.weather-text{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    flex:1;
+}
 .weather-desc{
     opacity: 0.8;
-    font-size: 18px;
-    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 2px;
 }
+
+.weather-info{
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.forecast-wrapper {
+    display: flex;
+    gap: 16px;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+    padding-bottom: 10px;
+}
+
+.forecast-grid {
+    text-align: center;
+    flex: 0 0 160px ;
+    padding: 12px;
+    border-radius: 10px;
+    background: #ffffff0d;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+}
+
+.daily-card{
+    justify-content: center;
+    align-items: center;
+    padding: 12px 18px;
+    background: rgba(255, 255, 255, 0.12);
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.daily-card .day-name{
+    font-weight: 600;
+}
+
+.daily-card .temp-range{
+    opacity: 0.9;
+    font-size: 10px;
+}
+
+
+.hourly-card{
+    align-items: center;
+    flex: 0 0 100px;
+    margin-top: 10px;
+    padding: 12px;
+    background: rgba(255, 255, 255, 0.12);
+    border-radius: 12px;
+    backdrop-filter: blur(10px);
+    text-align: center;
+}
+
+.hourly-title{
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.hourly-scroll{
+    display: flex;
+    overflow-x: visible;
+    flex-direction: row;
+    gap: 15px;
+    padding: 10px 0;
+}
+.hourly-item {
+    min-width: 90px;
+    padding: 12px;
+    text-align: center;
+    border-radius: 12px;
+    background: rgba(255,255,255,0.1);
+    backdrop-filter: blur(8px);
+    font-size: 5px;
+}
+
+.hourly-item .hour {
+    margin-bottom: 6px;
+}
+
+
+.hourly-item .temp {
+    font-size: 12px;
+    margin-bottom: 4px;
+}
+
